1 more reference; improve MILP

--- a/biblio.bib
+++ b/biblio.bib
@@ -104,3 +104,14 @@ keywords = "Decision-making, Stochastic dominance, Preference analysis, Sports"
   pages     = {306--320},
   year      = {2018}
 }
+
+@inproceedings{Xia2008,
+  author    = {Lirong Xia and
+               Vincent Conitzer},
+  title     = {Determining Possible and Necessary Winners under Common Voting Rules
+               Given Partial Orders},
+  booktitle = {Proceedings of the Twenty-Third {AAAI} Conference on Artificial Intelligence,
+               {AAAI} 2008, Chicago, Illinois, USA, July 13-17, 2008},
+  pages     = {196--201},
+  year      = {2008}
+}
